--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "casa_do_vira-lata",
   "version": "0.1.0",
+  "scripts": {
+    "postinstall": "apt-get update && apt-get install -y unixodbc-dev"
+  },
   "private": true,
   "scripts": {
     "dev": "next dev",
